@@ -31,7 +31,7 @@
 #define __FILTERS_H__
 
 #include <yarp/sig/Vector.h>
-#include <iCub/ctrl/ctrlMath.h>
+#include <iCub/ctrl/math.h>
 #include <deque>
 
 
