@@ -32,7 +32,7 @@
 
 #include <yarp/os/Property.h>
 #include <yarp/sig/Vector.h>
-#include <iCub/ctrl/ctrlMath.h>
+#include <iCub/ctrl/math.h>
 #include <deque>
 
 
