@@ -18,7 +18,7 @@
 
 #include <yarp/math/Math.h>
 #include <iCub/ctrl/pids.h>
-#include <iCub/ctrl/ctrlMath.h>
+#include <iCub/ctrl/math.h>
 
 #define PID_SAT(x,L,H)      ((x)>(H)?(H):((x)<(L)?(L):(x)))
 
