@@ -68,7 +68,7 @@ example code:
 #include <yarp/math/Math.h>
 #include <yarp/math/SVD.h>
 
-#include <iCub/ctrl/ctrlMath.h>
+#include <iCub/ctrl/math.h>
 //#include <iCub/iKin/iKinFwd.h>
 #include <iCub/iDyn/iDyn.h>
 #include <iCub/iDyn/iDynInv.h>
