@@ -23,7 +23,7 @@
 #include <yarp/os/Time.h>
 #include <yarp/math/Math.h>
 
-#include <iCub/ctrl/ctrlMath.h>
+#include <iCub/ctrl/math.h>
 
 #include <stdio.h>
 
